compose-replica-nginx-flask-node.js-mariadb/out/base/backnet-network-policy.yaml
#! backnet-network-policy.yaml
# Generated code, do not edit
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: backnet-network-policy
    namespace: indibit
spec:
    podSelector:
        matchLabels:
            com.docker.compose.network.backnet: "true"
    policyTypes:
        - Ingress
        - Egress
    ingress:
        - from:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.backnet: "true"
    egress:
        - to:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.backnet: "true"
